# llm-transformer-nlp

./: .pre-commit-config.yaml  README.md  main.py  multi_head_attention.py  pyproject.toml  scaled_dot_product_attention.py  test_torch_install.py
.obsidian/: workspace.json
code/attention/: multi_head_attention.py
src/jax/: mps.py
src/llm_transformer_nlp/: config.py  sample_token_embedding.py
src/llm_transformer_nlp/attention/: multi_head_attention.py  scaled_dot_product_attention.py
src/llm_transformer_nlp/encoder/: encoder.py  feed_forward.py  layer_normalization.py  positional_embedding.py
src/pipelines/: fill_mask.py  ner.py  question_answering.py  sentiment_analysis.py  summarization.py  text_generation.py  zero_shot_classification.py
src/pytorch/: model_create.py  model_train.py  model_train_copy.py  mps.py  pytorch.ipynb  pytorch_typehint.py
